[tool.poetry]
name = "streamback"
version = "0.0.0"
description = "2-way streams for your microservices"
authors = ["Stefanos Liakis <stliakis@gmail.com>"]
readme = "README.md"
packages = [{include = "streamback"}]

[tool.poetry.dependencies]
python = "^3.7 | 2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"